# eso-sentiment-analysis

./: .dockerignore  .gitignore  Dockerfile  constraints.txt  docker-compose.yml  exploratory_notebook.ipynb  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
src/eso_sentiment_analysis/: api_caller.py
test/: conftest.py
test/unit/: test_api_caller.py
